fixed details banner view on mobile

--- a/src/app/pages/home-page/components/details-banner/details-banner.component.scss
+++ b/src/app/pages/home-page/components/details-banner/details-banner.component.scss
@@ -55,6 +55,7 @@ gdsc-logo {
 }
 
 .content {
+  align-items: center;
   padding-bottom: 25px;
 }
 
